[package]
name = "rcli"
version = "0.1.0"
authors = ["uccs <15008601@qq.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
